# fnr_thesis

./: .gitignore  CMakeLists.txt  how_to_run.txt  package.xml  record_bags.txt  run_robot.txt
config/: amcl_config.yaml  ekf_config.yaml  qos_overrides.yaml  slam_offline.yaml  slam_toolbox_config.yaml
include/global_localization/: global_localization.hpp
include/kalman_rel_localization/: kalman_rel_localization.hpp  utilities.hpp  visualization.hpp
launch/: fusion_odom_test.launch.py  global_localization.launch.py  map_testing.launch.py  odom_calibration.launch.py  robot_integration_test.launch.py  sensors_init.launch.py  slam_toolbox_offline.launch.py  test_urdf.launch.py
maps/: map.yaml
rviz/: urdf_test.rviz
rviz2/: rviz_config.rviz
scripts/: visualize_imu.py
src/: amcl_path_recorder.cpp  cluster_test.cpp  duarte_init.cpp  dynamic_tf_publisher.cpp  frenet_motion.cpp  global_localization.cpp  joined_processor.cpp  kalman_circle_localization.cpp  kalman_rel_localization.cpp  kalman_spline.cpp  map_creator_pc.cpp  map_republisher.cpp  map_transformer.cpp  mobile_net.cpp  motion_kalman_attempt.cpp  object_detector.cpp  object_detector_complex.cpp  point_cloud_processor.cpp  pose_waiter.cpp  rel_localization_processor.cpp  same_center.cpp  spline_only.cpp  test_compression.cpp  utilities.cpp  visualization.cpp  yolo_visualize.cpp  zed_image_saver.cpp
src/older files/: better_cluster_no_kalman.cpp  cluster_test.cpp  ground_plane_processor.cpp  kalman_spline.cpp  motion_kalman_attempt.cpp  obstacle_detector.cpp  rel_localization_processor.cpp  same_center.cpp  skeleton_spline.cpp  spline_only copy.cpp  test_cluster_only.cpp
urdf/: car.urdf.xacro  duarte.urdf.xacro  new_duarte.urdf.xacro  robot.urdf.xacro  robot_integration.urdf.xacro  simple.urdf.xacro  test.urdf  vesc.urdf.xacro
weights/: classes.txt
