<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_processor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olivas.afonso@gmail.com">olivas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>

  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>yaml-cpp</depend>
  <depend>rcpputils</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>zed_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
